2015-01-13  Jason Merrill  <jason@redhat.com>

	PR c++/64251
	* decl2.c (mark_used): Don't mark if in_template_function.

	PR c++/64297
	* typeck.c (apply_memfn_quals): Correct wrong TYPE_CANONICAL.

2014-12-19  Release Manager

	* GCC 4.8.4 released.

2014-10-15  Jason Merrill  <jason@redhat.com>

	PR c++/63455
	Revert:
	* parser.c (cp_parser_abort_tentative_parse): Make sure we haven't
	committed to this tentative parse.

	PR c++/63415
	* pt.c (value_dependent_expression_p) [CONSTRUCTOR]: Check the type.
	(iterative_hash_template_arg): Likewise.

	PR c++/56710
	* semantics.c (finish_member_declaration): Don't push closure
	members.

	PR c++/58624
	* pt.c (tsubst_copy_and_build) [VAR_DECL]: Use TLS wrapper.
	* semantics.c (finish_id_expression): Don't call TLS wrapper in a
	template.

2014-08-07  Jason Merrill  <jason@redhat.com>

	PR c++/61959
	* semantics.c (cxx_eval_bare_aggregate): Handle POINTER_PLUS_EXPR.

	PR c++/58714
	* tree.c (stabilize_expr): A stabilized prvalue is an xvalue.

2014-01-27  Jason Merrill  <jason@redhat.com>

	PR c++/59823
	Core DR 1138
	* call.c (reference_binding): Pass LOOKUP_NO_TEMP_BIND for
	list-initialization.  A conversion to rvalue ref that involves
	an lvalue-rvalue conversion is bad.
	(convert_like_real): Give helpful error message.

2014-01-29  Jason Merrill  <jason@redhat.com>

	PR c++/59956
	* friend.c (do_friend): Pass the TEMPLATE_DECL to add_friend if we
	have a friend template in a class template.
	* pt.c (tsubst_friend_function): Look through it.
	(push_template_decl_real): A friend member template is
	primary.

2014-02-21  Jason Merrill  <jason@redhat.com>

	PR c++/60241
	* pt.c (lookup_template_class_1): Update DECL_TEMPLATE_INSTANTIATIONS
	of the partial instantiation, not the most general template.
	(maybe_process_partial_specialization): Reassign everything on
	that list.

2014-03-05  Jason Merrill  <jason@redhat.com>

	PR c++/60361
	* parser.c (cp_parser_template_id): Don't set up a CPP_TEMPLATE_ID